update JS overview and update JS examples

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -227,7 +227,7 @@ To configure your proxy setup using environment variables, your `.env.local` fil
     To configure your proxy setup using properties in your JavaScript application, pass the `proxyUrl` option to the [`load()`](https://clerk.com/docs/references/javascript/clerk/clerk#load) method.
 
     <InjectKeys>
-      <CodeBlockTabs options={["NPM module", "<script>"]}>
+      <CodeBlockTabs type="npm-script" options={["NPM module", "<script>"]}>
         ```js filename="main.js"
           import Clerk from '@clerk/clerk-js';
 
