--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -260,6 +260,16 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
   <!-- Add a <div id="user-button"> element to your HTML -->
   <div id="user-button"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -318,6 +328,16 @@ function unmountUserButton(node: HTMLDivElement): void;
   ```html filename="index.html" {15}
   <!-- Add a <div id="user-button"> element to your HTML -->
   <div id="user-button"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
