--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -331,6 +331,8 @@ The "unsafe" custom attributes can be set upon sign-up when creating or updating
 
 ### Setting unsafe metadata
 
+Updating this value overrides the previous value; it does not merge. To perform a merge, you can pass something like `{ …user.unsafeMetadata, …newData }` to this parameter.
+
 #### Using the Backend API
 
 <Tabs type="framework" items={["Next.js", "Node", "Go", "Ruby",  "cURL"]}>
@@ -566,37 +568,84 @@ The "unsafe" custom attributes can be set upon sign-up when creating or updating
   </Tab>
 
   <Tab>
-  ```html filename="unsafe.html"
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Clerk Unsafe Update</title>
-  </head>
-  <body>
-      <h1>Clerk JavaScript Email + Password</h1>
-      <div id="birthday-update">
-          <input placeholder="your birthday" id="birthday" type="string"></input>
-          <button onclick="updateBirthday()">Update Birthday</button>
-      </div>
+    <CodeBlockTabs type="npm-script" options={["NPM module", "<script>"]}>
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      await clerk.user.update({
+        unsafeMetadata: {
+          "birthday": "01-01-2000"
+        }
+      })
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv =
+        document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+
+    ```html filename="index.html"
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk Unsafe Update</title>
+    </head>
+    <body>
+      <div id="app"></div>
+
+      <!-- Initialize Clerk with your
+      Clerk publishable key and Frontend API URL -->
+      <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key='{{pub_key}}'
+        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
+      ></script>
+
       <script>
-          const updateBirthday = async () => {
-              const birthday = document.getElementById('birthday').value;
-              const {user} = window.Clerk;
-              user.update({
-                  unsafeMetadata: {
-                    "birthday": birthday
-                  }
-              })
-          };
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          if (Clerk.user) {
+            await Clerk.user.update({
+              unsafeMetadata: {
+                "birthday": "01-01-2000"
+              }
+            })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+            const signInDiv =
+              document.getElementById("sign-in");
+
+            Clerk.mountSignIn(signInDiv);
+          }
+        });
       </script>
-      // Script to load Clerk up
-      <script src="src/script.js" async crossorigin="anonymous"></script>
-  </body>
-  </html>
-  ```
+    </body>
+    </html>
+    ```
+    </CodeBlockTabs>
   </Tab>
 </Tabs>
 
