--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -125,6 +125,16 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -183,6 +193,16 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
   ```html filename="index.html" {15}
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -243,6 +263,16 @@ function openCreateOrganization(props?: CreateOrganizationProps): void;
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -295,6 +325,16 @@ function closeCreateOrganization(): void;
   ```html filename="index.html" {15}
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
