--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -127,6 +127,16 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -185,6 +195,16 @@ function unmountOrganizationProfile(node: HTMLDivElement): void;
   ```html filename="index.html" {15}
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -245,6 +265,16 @@ function openOrganizationProfile(props?: OrganizationProfileProps): void;
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
 
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -293,6 +323,16 @@ function closeOrganizationProfile(): void;
   ```html filename="index.html" {11}
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
